--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
@@ -33,7 +33,7 @@
                 <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                     <div class="container-fluid">
                         <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="~/pages/dashboard.html">
-                            Soft UI Dashboard
+                            Reimbursemenet App
                         </a>
                         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon mt-2">
@@ -51,9 +51,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link me-2" href="~/pages/profile.html">
+                                    <a class="nav-link me-2" asp-area="" asp-controller="Home" asp-action="LandingPage">
                                         <i class="fa fa-user opacity-6 text-dark me-1"></i>
-                                        Profile
+                                        Landing Page
                                     </a>
                                 </li>
                                 <li class="nav-item">
