--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Index.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center" id="container-fluid">
     <h1>Welcome to My Page</h1>
     <p>This is some content for My Page.</p>
 </div>
+
+@section Scripts{
+    
+}
