--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Shared/LandingPage.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Shared/LandingPage.cshtml
@@ -56,8 +56,8 @@
                               </ul>
                           </li> *@
                           <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li>
-                          <li><a href="#">Login</a></li> 
-                      </ul>        
+                            <li><a asp-area="" asp-controller="Auth" asp-action="LoginPage">Login</a></li>
+                        </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
                       </a>
