--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Index.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container-fluid py-4" id="container-fluid">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-lg-6 col-md-6 mb-md-0 mb-4">
             <div class="card">
                 <div class="card-header pb-0 px-3">
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="card-body pt-4 p-3">
-                    <div class="row p-2 gap-3 text-center align-items-center">
+					<div class="row p-2 gap-3 text-start align-items-center">
                         <div class="col">
                             <h4><i class="ni ni-money-coins"></i> Bill Creation</h4>
                         </div>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-4">
             <div class="card">
                 <div class="card-header pb-0 px-3">
                     <div class="text-start">
@@ -31,7 +31,38 @@
                     </div>
                 </div>
                 <div class="card-body pt-4 p-3">
-                    
+					<div class="row ">
+						<div class="col-lg-6 col-md-6 mb-4">
+							<div class="d-flex">
+								<div class="icon icon-shape bg-gradient-dark text-center border-radius-md">
+									<i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
+								</div>
+								<div class="ms-3">
+									<div class="numbers">
+										<p class="text-sm mb-0 text-capitalize font-weight-bold">Saldo</p>
+										<h5 class="font-weight-bolder mb-0">
+											$3,000
+										</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6">
+							<div class="d-flex">
+								<div class="icon icon-shape bg-gradient-dark text-center border-radius-md">
+									<i class="ni ni-shop text-lg opacity-10" aria-hidden="true"></i>
+								</div>
+								<div class="ms-3">
+									<div class="numbers">
+										<p class="text-sm mb-0 text-capitalize font-weight-bold">Limit</p>
+										<h5 class="font-weight-bolder mb-0">
+											$10,000
+										</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
                 </div>
             </div>
         </div>
@@ -106,7 +137,7 @@
 										<rect x="-6.10352e-05" width="14" height="54" rx="7" fill="#1EB6E7"></rect>
 									</svg>
 									<div>
-										<p class="fs-14 mb-2">Restaurant</p>
+										<p class="fs-14 mb-2">Consumption</p>
 										<span class="fs-18 font-w500"><span class="text-black me-2">$487</span>/$10,000</span>
 									</div>
 								</div>
@@ -115,7 +146,7 @@
 										<rect x="-6.10352e-05" width="14" height="54" rx="7" fill="#461EE7"></rect>
 									</svg>
 									<div>
-										<p class="fs-14 mb-2">Property</p>
+										<p class="fs-14 mb-2">Transportation</p>
 										<span class="fs-18 font-w500"><span class="text-black me-2">$3,890</span>/$4,000</span>
 									</div>
 								</div>
@@ -147,7 +178,7 @@
 											<span class="donut1" data-peity="{ &quot;fill&quot;: [&quot;rgb(30, 170, 231)&quot;, &quot;rgba(234, 234, 234, 1)&quot;],   &quot;innerRadius&quot;: 33, &quot;radius&quot;: 10}" style="display: none;">1/8</span><svg class="peity" height="90" width="90"><path d="M 45 0 A 45 45 0 0 1 76.81980515339464 13.180194846605364 L 68.33452377915607 21.665476220843935 A 33 33 0 0 0 45 12" data-value="1" fill="rgb(30, 170, 231)"></path><path d="M 76.81980515339464 13.180194846605364 A 45 45 0 1 1 44.99999999999999 0 L 44.99999999999999 12 A 33 33 0 1 0 68.33452377915607 21.665476220843935" data-value="7" fill="rgba(234, 234, 234, 1)"></path></svg>
 											<small class="text-black">5%</small>
 										</div>
-										<span class="fs-14 text-black d-block">Restaurant</span>
+										<span class="fs-14 text-black d-block">Consumption</span>
 									</div>
 								</div>
 								<div class="col-sm-6">
@@ -156,7 +187,7 @@
 											<span class="donut1" data-peity="{ &quot;fill&quot;: [&quot;rgb(255, 255, 255)&quot;, &quot;rgba(255, 255, 255, 0.2)&quot;],   &quot;innerRadius&quot;: 33, &quot;radius&quot;: 10}" style="display: none;">9/10</span><svg class="peity" height="90" width="90"><path d="M 45 0 A 45 45 0 1 1 18.549663646838702 8.594235253127373 L 25.603086674348383 18.30243918562674 A 33 33 0 1 0 45 12" data-value="9" fill="rgb(255, 255, 255)"></path><path d="M 18.549663646838702 8.594235253127373 A 45 45 0 0 1 44.99999999999999 0 L 44.99999999999999 12 A 33 33 0 0 0 25.603086674348383 18.30243918562674" data-value="1" fill="rgba(255, 255, 255, 0.2)"></path></svg>
 											<small class="text-white">96%</small>
 										</div>
-										<span class="fs-14 text-white d-block">Property</span>
+										<span class="fs-14 text-white d-block">Transportation</span>
 									</div>
 								</div>
 							</div>
