feature: Adding Manager Page 1.0

--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
@@ -96,7 +96,7 @@
                                                 <p class="text-xs font-weight-bold mb-0">Consumption</p>
                                             </td>
                                             <td>
-                                                <span class="badge rounded-pill text-bg-success text-dark text-xs">Approve</span>
+                                                <span class="badge badge-sm bg-gradient-success text-light text-sm">Approve</span>
                                             </td>
                                             <td>
                                                 <div class="d-flex align-items-center">
@@ -123,7 +123,7 @@
                                                 <p class="text-xs font-weight-bold mb-0">Installment</p>
                                             </td>
                                             <td>
-                                                <span class="badge rounded-pill text-bg-danger text-dark text-xs">Denied</span>
+                                                <span class="badge badge-sm bg-gradient-danger text-light text-sm">Denied</span>
                                             </td>
                                             <td>
                                                 <div class="d-flex align-items-center">
@@ -151,7 +151,7 @@
                                             </td>
                                             <td>
 
-                                                <span class="badge rounded-pill text-bg-primary text-dark text-xs">Archived</span>
+                                                <span class="badge badge-sm bg-gradient-primary text-light text-sm">Archived</span>
 
                                             </td>
                                             <td>
@@ -179,7 +179,7 @@
                                                 <p class="text-xs font-weight-bold mb-0">Transportation</p>
                                             </td>
                                             <td>
-                                                <span class="badge rounded-pill text-bg-warning text-dark text-xs">Pending</span>
+                                                <span class="badge badge-sm bg-gradient-warning text-light text-sm">Pending</span>
                                             </td>
                                             <td>
                                                 <div class="d-flex align-items-center">
