--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model ReimbursementAPI.DTO.Account.AccountLoginDto
+
+@{
     Layout = null;
 }
 
@@ -45,12 +47,6 @@
                         <div class="collapse navbar-collapse" id="navigation">
                             <ul class="navbar-nav mx-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">
-                                        <i class="fa fa-chart-pie opacity-6 text-dark me-1"></i>
-                                        Dashboard
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link me-2" asp-area="" asp-controller="Home" asp-action="LandingPage">
                                         <i class="fa fa-user opacity-6 text-dark me-1"></i>
                                         Landing Page
@@ -85,21 +81,28 @@
                                     <p class="mb-0">Enter your email and password to sign in</p>
                                 </div>
                                 <div class="card-body">
-                                    <form role="form">
-                                        <label>Email</label>
-                                        <div class="mb-3">
-                                            <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                                    <form asp-action="LoginPage">
+                                        <!-- Email input -->
+                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                        <div class="form-group mb-3">
+                                            <label asp-for="Email" class="control-label"></label>
+                                            <input asp-for="Email" class="form-control" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
                                         </div>
-                                        <label>Password</label>
-                                        <div class="mb-3">
-                                            <input type="email" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
+
+                                        <!-- Password input -->
+                                        <div class="form-group mb-3">
+                                            <label asp-for="Password" class="control-label"></label>
+                                            <input asp-for="Password" class="form-control" />
+                                            <span asp-validation-for="Password" class="text-danger"></span>
                                         </div>
+
                                         <div class="form-check form-switch">
                                             <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
                                             <label class="form-check-label" for="rememberMe">Remember me</label>
                                         </div>
                                         <div class="text-center">
-                                            <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
+                                            <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0" value="Index">Sign in</button>
                                         </div>
                                     </form>
                                 </div>
