--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Manager.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Manager.cshtml
@@ -11,10 +11,12 @@
                             <thead>
                                 <tr>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Reimbursement</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Approval Status</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Detail</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -25,6 +27,9 @@
                                                 <h6 class="mb-0 text-xs">1</h6>
                                             </div>
                                         </div>
+                                    </td>
+                                    <td>
+                                        <p class="text-xs font-weight-bold mb-0">Sargung</p>
                                     </td>
                                     <td>
                                         <p class="text-xs font-weight-bold mb-0">Consumption</p>
@@ -45,8 +50,8 @@
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center mt-1">
-                                            <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                Invoice
+                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
+                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
                                             </button>
                                         </div>
                                     </td>
@@ -58,6 +63,9 @@
                                                 <h6 class="mb-0 text-xs">2</h6>
                                             </div>
                                         </div>
+                                    </td>
+                                    <td>
+                                        <p class="text-xs font-weight-bold mb-0"></p>
                                     </td>
                                     <td>
                                         <p class="text-xs font-weight-bold mb-0">Installment</p>
@@ -78,10 +86,13 @@
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center mt-1">
-                                            <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                Invoice
+                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
+                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
                                             </button>
                                         </div>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-link text-info text-sm mb-0 px-0 ms-0"><i class="ni ni-send"></i>Acc</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -91,6 +102,9 @@
                                                 <h6 class="mb-0 text-xs">3</h6>
                                             </div>
                                         </div>
+                                    </td>
+                                    <td>
+                                        <p class="text-xs font-weight-bold mb-0"></p>
                                     </td>
                                     <td>
                                         <p class="text-xs font-weight-bold mb-0">Invesment</p>
@@ -111,8 +125,8 @@
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center">
-                                            <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                Invoice
+                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
+                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
                                             </button>
                                         </div>
                                     </td>
@@ -124,6 +138,9 @@
                                                 <h6 class="mb-0 text-xs">4</h6>
                                             </div>
                                         </div>
+                                    </td>
+                                    <td>
+                                        <p class="text-xs font-weight-bold mb-0"></p>
                                     </td>
                                     <td>
                                         <p class="text-xs font-weight-bold mb-0">Transportation</p>
@@ -144,8 +161,8 @@
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center">
-                                            <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                Invoice
+                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
+                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
                                             </button>
                                         </div>
                                     </td>
