--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
@@ -55,10 +55,27 @@
                             </li>
                         </ul>
                     </div>
+                    @{
+                        var token = ViewData["Token"];
+                    }
+                    <div id="token" data-token="@token" style="display: none">@token</div>
                     <div class="tab-content mt-5">
                         <div id="pending" class="tab-pane fade show active">
-                            <h3 class="text-center"><i class="ni ni-atom"></i></h3>
-                            <p class="text-center">You don't have any pending reimbursement request</p>
+                            <div class="table-responsive">
+                                <table class="table align-items-center mb-0" id="table_Reimbursement">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Reimbursement</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Invoice</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tBody_Reimbursement">
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                         <div id="approved" class="tab-pane fade">
                             <h3 class="text-center"><i class="ni ni-atom"></i></h3>
@@ -386,7 +403,7 @@
 
 </div>
 
-
 @section Scripts{
+    <script src="~/js/tableReimbursement.js" asp-append-version="true"></script>
     <script src="~/js/reimbursement.js" asp-append-version="true"></script>
 }
