fix: fixing dataTables

--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Reimbursement.cshtml
@@ -67,6 +67,7 @@
                                         <tr>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Reimbursement</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Invoice</th>
@@ -95,6 +96,7 @@
                                         <tr>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Reimbursement</th>
+                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date</th>
                                             <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Invoice</th>
@@ -404,6 +406,6 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/tableReimbursement.js" asp-append-version="true"></script>
     <script src="~/js/reimbursement.js" asp-append-version="true"></script>
+    <script src="~/js/tableReimbursement.js" asp-append-version="true"></script>
 }
