fix : unfixed Get Table Admin

--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Admin.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Admin.cshtml
@@ -26,6 +26,7 @@
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Hiring Date</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Email</th>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Phone Number</th>
+                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">isActivated</th>
                                 </tr>
                             </thead>
                             <tbody id="tBody_Admin">
