feature: adding sweetalert script

--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Shared/_Layout.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Shared/_Layout.cshtml
@@ -470,6 +470,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js" asp-append-version="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js" asp-append-version="true"></script>
     <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/assets/js/soft-ui-dashboard.min.js?v=1.0.3"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
