--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Finance.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Finance.cshtml
@@ -150,9 +150,13 @@
                 <div class="card-header pb-0 px-3">
                     <h6 class="mb-0">List of Reimbursement</h6>
                 </div>
+                @{
+                    var token = ViewData["Token"];
+                }
+                <div id="token" data-token="@token" style="display: none">@token</div>
                 <div class="card-body pt-4 p-3">
                     <div class="table-responsive p-0">
-                        <table class="table align-items-center justify-content-center mb-0">
+                        <table class="table align-items-center justify-content-center mb-0" id="table_FinanceReimbursement">
                             <thead>
                                 <tr>
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
@@ -164,179 +168,10 @@
                                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2">
-                                            <div class="my-auto">
-                                                <h6 class="mb-0 text-xs">1</h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Sargung</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Consumption</p>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <span class="me-2 text-xs">28/10/2023</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="mt-1">
-                                            <select class="form-select w-45" tabindex="null">
-                                                <option><span class="badge badge-sm bg-gradient-warning text-light text-sm">Pending</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-success text-light text-sm">Approve</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-danger text-light text-sm">Denied</span></option>
-                                            </select>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center mt-1">
-                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2">
-                                            <div class="my-auto">
-                                                <h6 class="mb-0 text-xs">2</h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0"></p>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Installment</p>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <span class="me-2 text-xs">28/10/2023</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="mt-1">
-                                            <select class="form-select w-45" tabindex="null">
-                                                <option><span class="badge badge-sm bg-gradient-warning text-light text-sm">Pending</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-success text-light text-sm">Approve</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-danger text-light text-sm">Denied</span></option>
-                                            </select>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center mt-1">
-                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
-                                            </button>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <button type="button" class="btn btn-link text-info text-sm mb-0 px-0 ms-0"><i class="ni ni-send"></i>Acc</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2">
-                                            <div class="my-auto">
-                                                <h6 class="mb-0 text-xs">3</h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0"></p>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Invesment</p>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <span class="me-2 text-xs">28/10/2023</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="mt-1">
-                                            <select class="form-select w-45" tabindex="null">
-                                                <option><span class="badge badge-sm bg-gradient-warning text-light text-sm">Pending</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-success text-light text-sm">Approve</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-danger text-light text-sm">Denied</span></option>
-                                            </select>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="d-flex px-2">
-                                            <div class="my-auto">
-                                                <h6 class="mb-0 text-xs">4</h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0"></p>
-                                    </td>
-                                    <td>
-                                        <p class="text-xs font-weight-bold mb-0">Transportation</p>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <span class="me-2 text-xs">28/10/2023</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="mt-1">
-                                            <select class="form-select w-45" tabindex="null">
-                                                <option><span class="badge badge-sm bg-gradient-warning text-light text-sm">Pending</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-success text-light text-sm">Approve</span></option>
-                                                <option><span class="badge badge-sm bg-gradient-danger text-light text-sm">Denied</span></option>
-                                            </select>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="d-flex align-items-center">
-                                            <button type="button" class="btn btn-link text-primary text-sm mb-0 px-0 ms-0" data-bs-toggle="modal" data-bs-target="#invoiceModal">
-                                                <i class="fas fa-file-pdf text-lg me-1"></i> Invoice
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
+                            <tbody id="tbody_FinanceReimbursement">
+                               
                             </tbody>
                         </table>
-                        <ul class="pagination pagination-primary">
-                            <li class="page-item active">
-                                <a class="page-link" href="javascript:;">1</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">2</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">3</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">4</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">5</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">6</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#link">7</a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -345,5 +180,5 @@
 </div>
 
 @section Scripts{
-
+    <script src="~/js/tableFinanceReimbursement.js" asp-append-version="true"></script>
 }
