feature: adding momentJS for date formatting

--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Finance.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Finance.cshtml
@@ -180,5 +180,7 @@
 </div>
 
 @section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js" asp-append-version="true"></script>
+    <script src="https://cdn.datatables.net/datetime/1.5.1/js/dataTables.dateTime.min.js"></script>
     <script src="~/js/tableFinanceReimbursement.js" asp-append-version="true"></script>
 }
