--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Manager.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Home/Manager.cshtml
@@ -192,5 +192,7 @@
 </div>
 
 @section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js" asp-append-version="true"></script>
+    <script src="https://cdn.datatables.net/datetime/1.5.1/js/dataTables.dateTime.min.js"></script>
     <script src="~/js/tableManagerReimbursement.js" asp-append-version="true"></script>
 }
